--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
   font-family: 'PT Serif', serif;
 }
 
@@ -11,9 +10,15 @@
 
 /* UTILITY */
 
+/* TOP-BAR */
+
+
+
+/* TOP-BAR */
+
 /* SIDEBAR */
 
-.container-sidebar{
+. container-sidebar{
   height: calc(100vh - 80px);
   position: relative;
 }
@@ -159,11 +164,30 @@
 /* MAINPAGE */
 
 .main-page{
-  background-color: lightblue;
+  background-color: #141922;
   height: calc(100vh - 80px);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
+.top-bar{
+  position: fixed;
+  height: 100px;
+  background-color: #080B12;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+.top-bar a{
+  border: 1px solid white;
+  border-radius: 20px;
+  color: #FFF;
+  padding: 10px 30px;
+}
+
+.web-page{
+  padding-top: 100px;
+}
 
 /* MAINPAGE */
 /* PLAYER-BAR */
@@ -361,6 +385,10 @@
     align-items: center;
   }
 
+  .footer-sidebar{
+    width: 30%;
+  }
+
   .ft-side1 span{
     display: inline-block;
   }
@@ -407,6 +435,10 @@
 }
 
 @media all and (min-width:992px){
+
+  .footer-sidebar{
+    width: 23%;
+  }
 
   .upper-player{
     justify-content: center;
