--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'PT Serif', serif;
+  font-family: 'Roboto', sans-serif;
+  /* font-family: 'PT Serif', serif; */
 }
 
 
@@ -39,6 +40,7 @@
   color: #FFF;
   margin-bottom: 10px;
   padding:10px 0px;
+  display: flex;
 }
 
 .brand span{
@@ -85,6 +87,7 @@
 .menu-sidebar{
   display: flex;
   margin: 10px 0;
+  align-items: center;
 }
 
 .menu-sidebar a:hover{
@@ -357,6 +360,7 @@
   .brand span{
     display:inline-block;
     font-size: 31px;
+    margin-left: 10px;
   }
 
   .icons-sidebar a{
