--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -350,6 +350,11 @@
 
 .container-img i:hover{
   opacity: 0.6;
+  cursor: pointer;
+}
+
+.box h3:hover , .box p:hover{
+  cursor: pointer;
 }
 
 /* MAINPAGE */
