--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -259,6 +259,7 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+
 }
 
 .top-bar a{
@@ -267,6 +268,12 @@
   color: #FFF;
   padding: 10px 30px;
   font-size: 10px;
+}
+
+.top-bar a:hover{
+  font-size: 20px;
+  background-color: green;
+  text-decoration: none;
 }
 
 .web-page{
@@ -310,11 +317,6 @@
   width: 150px;
   margin: 5px;
 }
-
-/* .box img{
-  width: 150px;
-  height: 150px;
-} */
 
 .box h3{
   font-weight: bold;
@@ -388,12 +390,14 @@
 .left-part a:last-child{
   color: #808080;
   font-size: 10px;
+  display: none;
 }
 
 .left-part .fa-heart{
   color: #808080;
   vertical-align:text-top;
-  margin-left: 10px;
+  margin-left: 15px;
+  font-size: 15px;
 }
 
 .central-part{
@@ -417,6 +421,7 @@
 
 .symb-18px{
   font-size: 18px;
+  display: none;
 }
 
 .symb-15px{
@@ -427,6 +432,7 @@
   display: flex;
   align-items: center;
   margin-top: 10px;
+
 }
 
 .lower-player span{
@@ -434,18 +440,18 @@
   font-size: 10px;
 }
 
-.lower-player span:first-child{
-  padding-right: 20px;
+/* .lower-player span:first-child{
+  padding-right: 8px;
 }
 
 .lower-player span:last-child{
   padding-left: 8px;
   padding-right: 12px;
-}
+} */
 
 
 .lower-player hr{
-  margin: 0;
+  margin: 0 5px;
   border: 2px solid #FFF;
   width: 100%;
   border-radius: 10px;
@@ -456,6 +462,8 @@
   display: flex;
   height: 100%;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .right-part i{
@@ -467,6 +475,14 @@
   width: 100%;
   border: 2px solid #FFF;
   border-radius: 10px;
+}
+
+.right-part .fa-desktop , .right-part .fa-sliders-h{
+  display: none;
+}
+
+.right-part .for-back-right-part{
+  font-size: 18px;
 }
 
 .left-part a:hover{
@@ -602,6 +618,7 @@
 
   .left-part a:last-child{
     font-size: 15px;
+    display: inline-block;
   }
 
   .left-part .fa-heart{
@@ -609,12 +626,31 @@
     margin-left: 20px;
   }
 
-  .lower-player span:last-child{
+  /* .lower-player span:last-child{
     padding-left: 20px;
     padding-right: 8px;
+  } */
+
+  .symb-18px{
+    display: inline-block;
   }
 
+  .lower-player hr{
+    margin: 0 10px;
+  }
 
+  .right-part .fa-desktop , .right-part .fa-sliders-h{
+    display: inline-block;
+  }
+
+  .right-part .for-back-right-part{
+    display: none;
+  }
+
+  .right-part{
+    flex-wrap: nowrap;
+    justify-content:flex-start;
+  }
 }
 
 @media all and (min-width:992px){
